clean up returns